--- a/package.json
+++ b/package.json
@@ -2,5 +2,20 @@
   "name": "teach",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "webpack",
+    "watch": "webpack-dev-server --open"
+  },
+  "dependencies": {
+    "d3": "^5.4.0"
+  },
+  "devDependencies": {
+    "@types/d3": "^5.0.0",
+    "ts-loader": "^4.3.0",
+    "typescript": "^2.8.3",
+    "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4"
+  }
 }
