--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack",
-    "watch": "webpack-dev-server --open"
+    "start": "webpack --watch",
+    "server": "webpack-dev-server --open"
   },
   "dependencies": {
     "d3": "^5.4.0"
