--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack --watch",
-    "server": "webpack-dev-server --open"
+    "start": "webpack --watch"
   },
   "dependencies": {
     "d3": "^5.4.0"
@@ -15,7 +14,6 @@
     "ts-loader": "^4.3.0",
     "typescript": "^2.8.3",
     "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-cli": "^2.1.4"
   }
 }
