--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack --watch"
+    "start": "webpack --watch --mode development"
   },
   "dependencies": {
     "d3": "^5.4.0"
